feat: :sparkles: Creating end point me for user
Creating end point me for user

Creating end point me for user
