# back-end/routes/api.php
@@ -6,11 +6,12 @@ use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
 
-Route::controller(UserController::class)->group(function(){
+Route::controller(UserController::class)->group(function () {
     Route::post('register', 'register');
     Route::post('login', 'login');
 });
-         
-Route::middleware('auth:sanctum')->group( function () {
+
+Route::middleware('auth:sanctum')->group(function () {
     Route::resource('tasks', TaskController::class);
+    Route::get('/me', [UserController::class, 'me']);
 });
