# back-end/storage/api-docs/api-docs.json
@@ -17,7 +17,6 @@
                     {
                         "name": "Content-Type",
                         "in": "header",
-                        "description": "Tipo de conteúdo da solicitação",
                         "required": true,
                         "schema": {
                             "type": "string",
@@ -337,6 +336,43 @@
                         "description": "Unauthorized"
                     }
                 }
+            }
+        },
+        "/api/me": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Retrieve tasks",
+                "description": "Endpoint to retrieve tasks for the authenticated user.",
+                "operationId": "aef6fdddec1e8495d4830821b4afdf54",
+                "parameters": [
+                    {
+                        "name": "Content-Type",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "multipart/form-data;"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Tasks retrieved successfully"
+                    },
+                    "204": {
+                        "description": "No content"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
